--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,91 +30,42 @@
   --color-temp-three-four: #2b3467;
 }
 
-/* .main-wrapper {
+.section {
   width: 100%;
   height: 100vh;
-  display: grid;
-  place-content: center;
-  display: grid;
-  place-content: center;
-  border: 4px solid red;
-} */
+  /* border: 3px solid red; */
+}
 
-.section-1-content {
-  display: flex;
+.section-one-image {
+  background-image: url("../assets/images/aqualization-main.jpeg");
+  width: 100%;
+  height: 100vh;
   position: relative;
 }
 
-#myVideo {
-  position: relative;
-  bottom: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 100%;
-}
-
-.section-1-info {
+.section__one__info {
   position: absolute;
-  margin: 10% 25%;
-  display: flex;
-  flex-direction: column;
-  /* border: 4px orange solid; */
-}
-
-.section-1-logo {
-  /* position: absolute; */
+  top: 79%;
+  left: 20%;
+  font-family: sans-serif;
+  font-size: 2rem;
   width: 50%;
-  margin: 0 25%;
-  /* border: 4px solid yellow; */
-}
 
-.section-1-content p {
-  width: 100%;
-  /* margin: 14% 28%; */
-  color: rgb(0, 255, 251);
-  font-size: 1.6rem;
-  font-family: sans-serif;
+  color: rgb(0, 255, 229);
+  /* border: 3px solid red; */
   text-align: center;
-  /* border: 4px solid red; */
 }
 
-.section-1-buttons {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  margin-top: 2rem;
-  /* border: 4px solid rgb(183, 255, 0); */
+/* Responsiveness */
+
+@media (max-width: 1022px) {
+  .section-one-image {
+    background-size: cover;
+  }
 }
 
-.section-1-buttons a {
-  padding: 1rem;
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  font-family: sans-serif;
-  background-color: rgb(255, 0, 0);
-  font-size: 1.5rem;
-  border-radius: 0.5rem;
-  /* margin-top: 3rem; */
-  /* border: 2px solid rgb(255, 255, 255); */
-  transition: 0.5s;
+@media (max-width: 909px) {
+  .section-one-image {
+    width: 909px;
+  }
 }
-
-.section-1-buttons a:hover {
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
-  /* border: 2px solid black; */
-}
-
-/* .section-1-buttons {
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-  width: 40%;
-  margin: 33% 28%;
-  border: 3px solid red;
-} */
-
-/* .section-1-buttons a {
-  padding: 1rem 2rem;
-  border: 2px solid yellow;
-} */
