--- a/assets/CSS/Style.css
+++ b/assets/CSS/Style.css
@@ -10,6 +10,10 @@ a {
   text-decoration: none;
 }
 
+body {
+  cursor: none;
+}
+
 @font-face {
   font-family: "BruceForever";
   src: url("../Fonts/bruce-forever-font/BruceForeverRegular-X3jd2.ttf");
@@ -45,6 +49,74 @@ a {
 :root {
   --nav-color-main: #161616;
 }
+
+/* ======================== cursor css ======================== */
+.cursor {
+  width: 20px;
+  height: 20px;
+  border: 1px solid rgb(0, 217, 255);
+  border-radius: 50%;
+  position: absolute;
+  transition-duration: 200ms;
+  transition-timing-function: ease-out;
+  animation: cursorAnimation 0.5s infinite alternate;
+}
+
+.cursor::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  border: 4px solid rgb(0, 0, 0);
+  border-radius: 50%;
+  opacity: 0.5;
+  top: -4px;
+  left: -4px;
+  animation: cursorAnimation2 0.5s infinite alternate;
+}
+
+.expand {
+  animation: cursorAnimation3 0.5s forwards;
+  border: 1px solid rgb(0, 221, 255);
+}
+
+@keyframes cursorAnimation {
+  from {
+    transform: scale(1.5);
+    color: rgb(0, 0, 0);
+  }
+  to {
+    transform: scale(0.8);
+    color: rgb(0, 0, 0);
+  }
+}
+
+@keyframes cursorAnimation2 {
+  from {
+    transform: scale(0.8);
+    color: rgb(0, 0, 0);
+  }
+  to {
+    transform: scale(0.4);
+    color: rgb(0, 0, 0);
+  }
+}
+
+@keyframes cursorAnimation3 {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+    color: rgb(0, 0, 0);
+  }
+  100% {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+}
+
+/* ===================== cursor css ends ====================== */
 
 .top-nav-menu {
   width: 100%;
@@ -232,10 +304,6 @@ section {
   background-color: #161616;
   color: white;
   transition: 0.4s;
-}
-
-.section-header {
-  /* display: flex; */
 }
 
 .footer i {
